Fix grid display on small screens

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -6,10 +6,9 @@
 }
 
 .project {
-  background-color: salmon;
+  background: url('http://via.placeholder.com/300');
   height: 350px;
   min-width: 300px;
-  max-width: 350px;
 }
 
 .grid {
@@ -18,6 +17,10 @@
   max-width: 1100px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 50px;
-  justify-items: center;
+  grid-gap: 30px;
+  justify-items: stretch;
+
+  @media screen and (max-width: 699px) {
+    width: 70%
+  }
 }
