--- a/style.css
+++ b/style.css
@@ -80,10 +80,9 @@ table {
   padding-bottom: 100px; }
 
 .project {
-  background-color: salmon;
+  background: url("http://via.placeholder.com/300");
   height: 350px;
-  min-width: 300px;
-  max-width: 350px; }
+  min-width: 300px; }
 
 .grid {
   width: 90%;
@@ -91,8 +90,11 @@ table {
   max-width: 1100px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 50px;
-  justify-items: center; }
+  grid-gap: 30px;
+  justify-items: stretch; }
+  @media screen and (max-width: 699px) {
+    .grid {
+      width: 70%; } }
 
 html {
   font-family: 'Khula', sans-serif;
